--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,5 @@
-message: This is a message defined in the configuration file config.yaml.
-messageRepetitions: 3
+database:
+    driverClass: com.mysql.jdbc.Driver
+    user: dev
+    password: dev
+    url: jdbc:mysql://localhost/dwbook-phonebook
