--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>dropwizard-core</artifactId>
             <version>0.7.0-rc2</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-jdbi</artifactId>
+            <version>0.7.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.daisy.libs</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.21-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>io.dropwizard</groupId>
